platform/core/metallb/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: metallb-system
  labels:
    app.kubernetes.io/part-of: sre-platform
    sre.io/network-policy-configured: "true"
